Alignment fix for mobile view. No select used on scroll_down element

--- a/src/index.css
+++ b/src/index.css
@@ -489,7 +489,7 @@ body {
   #Scroll_down_div-1 {
     position: absolute;
     left: 5vw;
-    bottom: 0;
+    bottom: 3vh;
     font-size: 3vw;
   }
   #Scroll_down_div-2 {
